updated to prevent page two from shifting when borders appear on hover

--- a/style.css
+++ b/style.css
@@ -90,6 +90,12 @@ body {
   height: 50px;
 }
 
+/****** this doesn't work. trying to slow scroll *****/
+
+/* #scroll {
+  transition-duration: 2s;
+} */
+
 .learnMore a{
   color: white;
   text-decoration: none;
@@ -182,7 +188,8 @@ body {
 
 .past {
   grid-area: a;
-  padding: 10px
+  padding: 10px;
+  border: 2px solid white;
 }
 
 .past:hover {
@@ -199,6 +206,7 @@ body {
 .present {
   grid-area: b;
   padding: 10px;
+  border: 2px solid white;
 }
 
 .present:hover {
@@ -215,6 +223,7 @@ body {
 .future {
   grid-area: c;
   padding: 10px;
+  border: 2px solid white;
 }
 
 .future:hover {
